# t4-llm

./: README.md  pyproject.toml  requirements.txt
configs/: __init__.py  data.py  model.py  training.py
llm125m/data/: __init__.py  dataloader.py  packing.py  streaming.py  tokenizer.py
llm125m/eval/: __init__.py  generation.py  perplexity.py
llm125m/model/: __init__.py  attention.py  block.py  ffn.py  init_weights.py  norm.py  rope.py  transformer.py
llm125m/training/: __init__.py  checkpoint.py  ddp.py  muon.py  optimizer.py  scheduler.py  trainer.py
llm125m/utils/: __init__.py  diagnostics.py  logging.py  seed.py  throughput.py
scripts/: bench_attention.py  bench_generation.py  bench_init.py  bench_memory.py  bench_optimizer.py  bench_throughput.py  generate.py  prepare_data.py  resume.py  smoke_test.py  train.py
tests/: test_attention.py  test_init.py  test_model_shapes.py  test_muon.py  test_packing.py  test_rope.py
